@@ -1,5 +1,7 @@
 2004-10-27  Vincent Noel  <vnoel@cox.net>
 
+	* zoom.c (repaint_zoom): Fixes issues brought up by multiple windows.
+
 	* log_repaint.c: Remove the save_rows_to_expand function which is
 	now useless.
 
